--- a/index.html
+++ b/index.html
@@ -1,91 +1,321 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>李明达-个人首页</title>
+	<link rel="stylesheet" href="css/less.css">
+	<link rel="stylesheet" href="css/cartoon.css">
+	<link rel="stylesheet" href="css/style.css">
+	<script src="js/jquery.js"></script>
+	<script src="js/lmd.js"></script>
+</head>
+<body>
+	<!-- 头部 -->
+	<div class="content-bg"></div>
+	<div class="nav_header">
+		<div class="container-fluid">
+	        <div class="row">
+				<div class="login col-l-2 col-m-12 col-s-6">
+					<a href="">LMD_WEBSITE</a>
+				</div>
+				<div class="info_s col-l-hide col-s-hide">
+					<div class="pic">
+						<div class="pic_hover"></div>
+						<div class="pic_font shake"><h3>Welcome To My Home</h3></div>
+					</div>
+				</div>
+				<div class="nav_menu col-l-10 col-m-12 col-s-6">
+					<div class="nb_background"><i class="nav_button"></i></div>
+					<ul class="nav_l col-m-hide col-s-hide floor">
+						<li id="id_banner_box"><a href="">首页</a></li>
+						<li id="id_show"><a href="">个人展示</a></li>
+						<li id="id_about"><a href="">关于我</a></li>
+						<li id="id_object"><a href="">作品展示</a></li>
+						<li id="id_contant"><a href="">经验总结</a></li>
+						<li id="id_connect"><a href="">联系交流</a></li>
+					</ul>
+					<ul class="nav_m col-s-hide col-l-hide floor">
+						<li id="id_banner_box"><a href="">首页</a></li>
+						<li id="id_show"><a href="">个人展示</a></li>
+						<li id="id_about"><a href="">关于我</a></li>
+						<li id="id_object"><a href="">作品展示</a></li>
+						<li id="id_contant"><a href="">经验总结</a></li>
+						<li id="id_connect"><a href="">联系交流</a></li>
+					</ul>
+					<ul class="nav_s col-m-hide col-l-hide floor">
+						<li id="id_banner_box"><a href="">首页</a></li>
+						<li id="id_show"><a href="">个人展示</a></li>
+						<li id="id_about"><a href="">关于我</a></li>
+						<li id="id_object"><a href="">作品展示</a></li>
+						<li id="id_contant"><a href="">经验总结</a></li>
+						<li id="id_connect"><a href="">联系交流</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+   <!--banner-->
+   <div class="section ">
+   	  <!--banner-->
+   	   <div id="" class="banner_box">
+	   	   <div class="binfo">
+	   	   	    <div class="binfo_hp">
+		   	   		<div class="binfo_h "><h1 class="tantiao" >Action speak louder than words.</h1></div>
+		   	   	    <div class="binfo_h "><h2 class="fadeInUp">御万物之律 游无疆境界</h2></div>	
+	   	    	</div>   
+	       		<div class="info_s_copy col-m-hide">
+					<div class="pic tan">
+						<div class="pic_hover"></div>
+						<div class="pic_font shake"><h3>Welcome To My Home</h3></div>
+					</div>
+				</div>    
+	       </div>
+        </div>
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+       <!-- show -->
+       <div id="" class="show">
+       	    <div class="container-fluid">
+       	    	<div class="row">
+		       	    <div class="show_left col-l-6 col-m-12 col-s-12">
+		       	    	<h2>换个角度看世界</h2>
+		       	    	<h3>世界有多少种缤纷，世界有多少种绚烂，或许你我都不是很清楚。当一个人经历了种种艰辛和酸楚之时，他就会明白——从多个角度看世界，得到的会是异样的世界。每一次新的尝试都是在寻找新的世界颜色的一种探索和追求。往往一个初生牛犊的人真的会很不了解这个世界，好奇推动着他在这个世界磕磕绊绊，这也是在一次次击打着他幼小的心灵。</h3>
+		       	    	<p>How many kinds of colorful world, there are many kinds of gorgeous world, maybe you and I are not very clear. When a person has experienced all kinds of hardships and sorrow and grief when he will understand, see the world from the point of view, to be a strange world. Every new attempt is an exploration and pursuit of the new world. </p>
+		       	    </div>
+		       	    <div class="show_right col-l-6 col-m-12 col-s-12">
+		       	    	<div class="lunbo show_img">
+		       	    		<a href="" ></a>
+		       	    		<a href="" ></a>
+		       	    		<a href="" ></a>
+		       	    		<a href="" ></a>
+		       	    	</div>
+		       	    </div>	    		
+       	    	</div>
+       	    </div>
+       </div>
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Lmdwebsite by alimingda</title>
-  </head>
+       <!-- about me -->
+       <div id="" class="about">
+       	    <div class="container-fluid">
+       	    	<div class="row">
+       	    		<div class="about_title col-l-12 col-m-12 col-s-12">
+       	    			<h2>About me</h2>
+       	    			<h3>关于我</h3>
+       	    		</div>
+       	    		<div class="about_con col-l-12 col-m-12 col-s-12">
+       	    			<div class="container-fluid">
+       	    				<div class="row">
+       	    					<div class="about_left col-l-6 col-m-12 col-s-12">
+       	    						<div class="lunbo about_img">
+					       	    		<a href="" ></a>
+					       	    		<a href="" ></a>
+					       	    		<a href="" ></a>
+					       	    		<a href="" ></a>
+					       	    	</div>
+					       	    	<div class="left_btn"><</div>
+					       	    	<div class="right_btn">></div>
+       	    					</div>
+       	    					<div class="about_right col-l-6 col-m-12 col-s-12">
+       	    						<h2>李明达</h2>
+       	    						<h3>前端工程师</h3>
+       	    						<p>我是一个对生活和工作充满热情的人。喜欢书籍、电影、游戏、旅游，了解新媒体和互联网行业。在工作中能专心做好本职工作，能够和同事相处的融洽。</p>
+       	    						<p>Web前端开发是一项很特殊的工作，涵盖的知识面非常广，既有具体的技术，又有抽象的理念。简单地说，它的主要职能就是把网站的界面更好地呈现给用户。其次，优秀的Web前端开发工程师应该具备快速学习能力。</p>
+       	    						<p>Web发展的很快，甚至可以说这些技术几乎每天都在变化！如果没有快速学习能力，就跟不上Web发展的步伐。前端工程师必须不断提升自己，不断学习新技术、新模式；仅仅依靠今天的知识无法适应未来。Web的明天与今天必将有天壤之别，而前端工程师的工作就是要搞清楚如何通过自己的Web应用程序来体现这种翻天覆地的变化。</p>
+       	    					</div>
+       	    				</div>
+       	    			</div>
+       	    		</div>
+       	    	</div>
+       	    </div>
+       </div>
+      
+       <!-- object -->
+	   <div id="" class="object">
+	   	    <div class="container-fluid">
+	   	    	<div class="row">
+	        	    <div class="object_title col-l-12 col-m-12 col-s-12">
+		       	    	<h2>Project Exhibition</h2>
+		       	    	<h3>与您一起交流,我将不断进步</h3>
+		       	    </div>
+		       	    <div class="object_con col-l-12 col-m-12 col-s-12">
+				       	<div class="pic_fade">
+							<a class="pic_f_main" href="">
+								<img src="img/object01.png">
+								<span class="overlay">
+									<h2>新闻发布系统</h2>
+									<span>News release system</span>
+								</span>
+							</a>
+							<a class="pic_f_main" href="">
+								<img src="img/object02.png">
+								<span class="overlay">
+									<h2>北京车网互联</h2>
+									<span>Beijing car network interconnection</span>
+								</span>
+							</a>
+							<a class="pic_f_main" href="">
+								<img src="img/object03.png">
+								<span class="overlay">
+									<h2>东方艺品</h2>
+									<span>Oriental crafts</span>
+								</span>
+							</a>
+							<a class="pic_f_main" href="">
+								<img src="img/object04.png">
+								<span class="overlay">
+									<h2>个人博客</h2>
+									<span>Personal blog</span>
+								</span>
+							</a>
+							<a class="pic_f_main" href="">
+								<img src="img/object05.png">
+								<span class="overlay">
+									<h2>读心术游戏</h2>
+									<span>Mind reading game</span>
+								</span>
+							</a>
+							<a class="pic_f_main" href="">
+								<img src="img/object06.png">
+								<span class="overlay">
+									<h2>纸牌游戏</h2>
+									<span>The card Game</span>
+								</span>
+							</a>
+							<a class="pic_f_main" href="">
+								<img src="img/work_7.jpg">
+								<span class="overlay">
+									<h2>美食展示</h2>
+									<span>foods</span>
+								</span>
+							</a>
+							<a class="pic_f_main" href="">
+								<img src="img/work_8.jpg">
+								<span class="overlay">
+									<h2>一个人的旅行</h2>
+									<span>travels</span>
+								</span>
+							</a>
+					    </div>  
+		       	    </div>
+	   	    	</div>
+	   	    </div>
+	   </div>
+	    <!-- contant -->
+	   <div id="" class="contant">
+	    	<div class="container-fluid">
+	    		<div class="row">
+	    			<div class="contant_title col-l-12 col-m-12 col-s-12">
+		       	    	<h2>summarize experience</h2>
+		       	    	<h3>经验总结（每日更新）</h3> 
+	    			</div>
+	    			<div class="contant_con col-l-12 col-m-12 col-s-12">
+		       	    	<div class="container-fluid">
+	    		            <div class="row">
+	    		            	<div class="cc_main col-l-12 col-m-12 col-s-12">
+		    		            	<div class="cc_title">
+		    		            		<span>1.明确方向</span>
+		    		            		<i></i>
+		    		            	</div>
+		    		            	<div class="cc_con">
+		    		            		<p>一定要确定自己的发展方向，并为此目的制定可行的计划。不要说什么，“我刚毕业，还不知道将来可能做什么？”，“跟着感觉走，先做做看”。因为，这样的观点会通过你的潜意识去暗示你的行为无所事事、碌碌无为。一直做技术，将来成为专家级人物？向管理方向走，成为职业经理人？先熟悉行业和领域，将来自立门户？还是先在行业里面混混，过几年转行做点别的？这很重要，它将决定你近几年、十年内“做什么事情才是在做正确的事情！”</p>
+		    		            	</div>		    		            		
+	    		            	</div>	   
+	    		            	<div class="cc_main col-l-12 col-m-12 col-s-12">
+		    		            	<div class="cc_title">
+		    		            		<span>2.学会去接触它——“书”</span>
+		    		            		<i></i>
+		    		            	</div>
+		    		            	<div class="cc_con">
+		    		            		<p>书籍是人类进步的阶梯，对软件开发人员尤其如此。书籍是学习知识的最有效途径，不要过多地指望在工作中能遇到“世外高人”，并不厌其烦地教你。对于花钱买书，我个人经验是：千万别买国内那帮人出的书！我买的那些家伙出的书，!%全部后悔了，无一本例外。更气愤的是，这些书在二手市场的地摊上都很难卖掉。“拥有书籍并不表示拥有知识；拥有知识并不表示拥有技能；拥有技能并不表示拥有文化；拥有文化并不表示拥有智慧。”只有将书本变成的自己智慧，才算是真正拥有了它。</p>
+		    		            	</div>		    		            		
+	    		            	</div>	   
+	    		            	<div class="cc_main col-l-12 col-m-12 col-s-12">
+		    		            	<div class="cc_title">
+		    		            		<span>3.不要总是“我以为”</span>
+		    		            		<i></i>
+		    		            	</div>
+		    		            	<div class="cc_con">
+		    		            		<p>不要仅局限于对某项技术的表面使用上，哪怕你只是偶尔用一、二次。“对任何事物不究就里”是任何行业的工程师所不应该具备的素质。开发windows应用程序，看看windows程序的设计、加载、执行原理，分析一下pe文件格式，试试用sdk开发从头开发一个windows应用程序；用vc＋＋、delphi、java、net开发应用程序，花时间去研究一下mfc、vcl、j2ee、net它们框架设计或者源码；除了会用j2ee、jboss、spring、hibernate等等优秀的开源产品或者框架，抽空看看大师们是如何抽象、分析、设计和实现那些类似问题的通用解决方案的。试着这样做做，你以后的工作将会少遇到一些让你不明就里、一头雾水的问题，因为，很多东西你“知其然且知其所以然”！</p>
+		    		            	</div>		    		            		
+	    		            	</div>	   
+	    		            	<div class="cc_main col-l-12 col-m-12 col-s-12">
+		    		            	<div class="cc_title">
+		    		            		<span>4.学会思考</span>
+		    		            		<i></i>
+		    		            	</div>
+		    		            	<div class="cc_con">
+		    		            		<p>养成总与反思的习惯，并有意识地提炼日常工作成果，形成自己的个人源码库、解决某类问题的通用系统体系构、甚至进化为框架。众所周知，对软件开发人员而言，有、无经验的一个显著区别是：无经验者完成任何任务时都从头开始，而有经验者往往通过重组自己的可复用模块、类库来解决问题（（其实这个论不应该被局限在软件开发领域、可以延伸到很多方面）。这并不是说，所有可复用的东西都必须自己实现，别人成熟的通过测试的成果也可以收集、整理、集成到自己的知识库中。但是，最好还是自己实现，这样没有知识产权、版权等问题，关键是自己实现后能真正掌握这个知识点，拥有这个技能。</p>
+		    		            	</div>		    		            		
+	    		            	</div>
+	    		            	<div class="cc_main col-l-12 col-m-12 col-s-12">
+		    		            	<div class="cc_title">
+		    		            		<span>5.心态放正</span>
+		    		            		<i></i>
+		    		            	</div>
+		    		            	<div class="cc_con">
+		    		            		<p>心态有多开放，视野就有多开阔。不要抱着自己的技术和成果，等到它们都已经过时变成垃圾了，才拿出来丢人现眼。请及时发布自己的研究成果：开发的产品、有创意的设计或代码，公布出来让大家交流或者使用，你的成果才有进化和升华的机会。想想自己xx年间开发的那些windows系统工具，5、6年之后的今天，还是那个样子，今天流行的好多windows系统工具都比自己的晚，但进化得很好，且有那么多用户在使用。并且，不要保守自己的技术和思想，尽可能地与人交流与分享，或者传授给开发团队的成员。“与人交换苹果之后，每个人还是只有一个苹果；但交换思想之后，每个人都拥有两种思想”，道理大家都懂，但有多少人真正能做到呢？</p>
+		    		            	</div>		    		            		
+	    		            	</div>			            	         	
+	    		            </div>
+	    		        </div>
+	    			</div>
+	    		</div>
+	    	</div>   	
+	   </div>       
+	     <!-- connect -->
+	   <div id="" class="connect">
+	    	<div class="container-fluid">
+	    		<div class="row">
+		       	    <div class="connect_title col-l-12 col-m-12 col-s-12">
+		       	    	<h2>Please connect me</h2>
+		       	    	<h3>如果你有更好的创意和想法联系我,我们一起共同进步.</h3>
+		       	    </div>
+		            <form action="#" method="post" class="connect_form col-l-12 col-m-12 col-s-12">
+				    	<div class="container-fluid">
+				    		<div class="row">
+	                            <fieldset class="col-l-4 col-m-4 col-s-12">
+	                                <input type="text" id="c_name" placeholder="Your Name...">
+	                            </fieldset>
+	                            <fieldset class="col-l-4 col-m-4 col-s-12">
+	                                <input type="email" id="c_email" placeholder="Your Email...">
+	                            </fieldset>
+	                            <fieldset class="col-l-4 col-m-4 col-s-12">
+	                                <input type="text" id="c_subject" placeholder="Title...">
+	                            </fieldset>
+	                            <fieldset class="col-l-12 col-m-12 col-s-12">
+	                                <textarea name="message" id="c_message" cols="30" rows="6" placeholder="Leave your message..."></textarea>
+	                            </fieldset>
+	                            <fieldset class="col-l- col-m-12 col-s-12">
+	                                <input type="submit" id="c_button" value="Send Message">
+	                            </fieldset>
+				    		</div>
+				    	</div>
+		            </form>	
+	    		</div>
+	    	</div>
+	   </div>
 
-  <body>
-    <a id="forkme_banner" href="https://github.com/alimingda/lmdwebsite">View on GitHub</a>
-    <div class="shell">
-
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Lmdwebsite</h1>
-            <h2></h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
-
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/alimingda/lmdwebsite/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/alimingda/lmdwebsite/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
+	    <!-- footer -->
+	   <div id="" class="footer">
+	    	<div class="container-fluid">
+	    		<div class="row">
+	    			<div class="footer_con col-l-12 col-m-12 col-s-12">
+	    				<span>Copyright © 2016 LMD_WEBSITE . All Rights Reserved. </span>
+	    			</div> 
+	    		</div>
+	    	</div> 	
+	   </div>
 
 
-      <span class="banner-fix"></span>
+   </div>
 
 
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+	
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/alimingda">alimingda</a> can be found on <a href="https://github.com/alimingda/lmdwebsite">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
-
-    </div>
-
-    
-  </body>
+</body>
 </html>
